--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -884,6 +884,19 @@
   timestamp = {2020.07.22},
 }
 
+@Article{Alexander2021,
+  author    = {Alexander, S.},
+  title     = {Population Thinking and Narrative Networks: Dickens, Joyce, and The Wire},
+  journal   = {Modern Language Quarterly},
+  year      = {2021},
+  volume    = {82},
+  number    = {3},
+  pages     = {315-343},
+  doi       = {10.1215/00267929-9090293},
+  owner     = {Vincent},
+  timestamp = {2021.09.04},
+}
+
 @Article{Alexopoulos2010,
   author    = {Alexopoulos, E.},
   title     = {Introduction to Multivariate Regression Analysis},
@@ -2780,6 +2793,19 @@
   timestamp = {2020.12.18},
 }
 
+@Article{Baumeister1995,
+  author    = {Baumeister, R. F. and Leary, M. R.},
+  title     = {The need to belong: Desire for interpersonal attachments as a fundamental human motivation.},
+  journal   = {Psychological Bulletin},
+  year      = {1995},
+  volume    = {117},
+  number    = {3},
+  pages     = {497-529},
+  doi       = {10.1037/0033-2909.117.3.497},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Bavelas1948,
   author    = {Bavelas, A.},
   title     = {A Mathematical Model for Group Structures},
@@ -3225,6 +3251,19 @@
   url       = {http://ceur-ws.org/Vol-2593/paper6.pdf},
 }
 
+@Article{Berkman2000,
+  author    = {Berkman, L. F. and Glass, T. and Brissette, I. and Seeman, T. E.},
+  title     = {From social integration to health: Durkheim in the new millennium},
+  journal   = {Social Science \& Medicine},
+  year      = {2000},
+  volume    = {51},
+  number    = {6},
+  pages     = {843-857},
+  doi       = {10.1016/s0277-9536(00)00065-4},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Bernard1988,
   author    = {Bernard, H. R. and Killworth, P. D. and Evans, M. J. and McCarty, C. and Shelley, G. A.},
   title     = {Studying Social Relations Cross-Culturally},
@@ -3322,6 +3361,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Berzonsky2007,
+  author    = {Berzonsky, M. D. and Branje, S. J. T. and Meeus, W.},
+  title     = {Identity-Processing Style, Psychosocial Resources, and Adolescents{\textquotesingle} Perceptions of Parent-Adolescent Relations},
+  journal   = {Journal of Early Adolescence},
+  year      = {2007},
+  volume    = {27},
+  number    = {3},
+  pages     = {324-345},
+  doi       = {10.1177/0272431607302006},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @InProceedings{Besnier2020,
   author    = {Besnier, C.},
   title     = {History to Myths: Social Network Analysis for Comparison of Stories over Time},
@@ -3380,6 +3432,16 @@
   doi       = {10.1111/j.1467-8659.2009.01687.x},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Book{Bhabha2012,
+  title     = {The Location of Culture},
+  publisher = {Routledge},
+  year      = {2012},
+  author    = {Bhabha, H. K.},
+  doi       = {10.4324/9780203820551},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @InProceedings{Bhattacharya2005,
@@ -3542,6 +3604,16 @@
   doi       = {10.1146/annurev.so.12.080186.000435},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Book{Bijleveld2014,
+  title     = {The Psychological Science of Money},
+  publisher = {Springer},
+  year      = {2014},
+  author    = {Bijleveld, E. and Aarts, H.},
+  doi       = {10.1007/978-1-4939-0959-9},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @TechReport{Bilenko2013,
@@ -4560,6 +4632,18 @@
   timestamp = {2021.01.21},
 }
 
+@InCollection{Bouknight-Davis2004,
+  author    = {Bouknight-Davis, G.},
+  title     = {Chinese Economic Development and Ethnic Identity Formation in Jamaica},
+  booktitle = {The Chinese in the Caribbean},
+  publisher = {Markus Wiener},
+  year      = {2004},
+  pages     = {86-88},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.semanticscholar.org/paper/The-Chinese-in-the-Caribbean-Wilson/ea415ebf1ff5709f53d63303432498bffe34c5ba},
+}
+
 @Article{Bounegru2016,
   author    = {Bounegru, L. and Venturini, T. and Gray, J. and Jacomy, M.},
   title     = {Narrating Networks: Exploring the affordances of networks as storytelling devices in journalism},
@@ -5195,6 +5279,19 @@
   timestamp = {2020.12.12},
 }
 
+@Article{Bryan2004,
+  author    = {Bryan, P.},
+  title     = {The Settlement of the Chinese in Jamaica: 1854-c.1970},
+  journal   = {Caribbean Quarterly},
+  year      = {2004},
+  volume    = {50},
+  number    = {2},
+  pages     = {15-25},
+  doi       = {10.1080/00086495.2004.11672230},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Book{Bryant2009,
   title     = {Media Effects: Advances in Theory and Research},
   publisher = {Routledge},
@@ -5560,6 +5657,19 @@
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://global.oup.com/academic/product/tragedy-a-very-short-introduction-9780192802354},
+}
+
+@Article{Buss1990,
+  author    = {Buss, D. M.},
+  title     = {The Evolution of Anxiety and Social Exclusion},
+  journal   = {Journal of Social and Clinical Psychology},
+  year      = {1990},
+  volume    = {9},
+  number    = {2},
+  pages     = {196-201},
+  doi       = {10.1521/jscp.1990.9.2.196},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @Book{Butler1972,
@@ -5950,6 +6060,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.nap.edu/read/10735/chapter/9},
 }
 
+@Book{Carlisle2009,
+  title     = {Encyclopedia of Play in Today's Society},
+  publisher = {SAGE},
+  year      = {2009},
+  author    = {Carlisle, R. P.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://us.sagepub.com/en-us/nam/encyclopedia-of-play-in-todays-society/book232868},
+}
+
 @Article{Carney2014,
   author    = {Carney, J. and Wlodarski, R. and Dunbar, R.},
   title     = {Inference or Enaction? The Impact of Genre on the Narrative Processing of Other Minds},
@@ -6198,6 +6318,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1109/asonam.2016.7752272},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Article{Chakraborty2021,
+  author    = {Chakraborty, S. and Muhuri, S. and Das, D.},
+  title     = {Detection of constant member and overlapping community from dynamic literary network},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2021},
+  volume    = {11},
+  pages     = {77},
+  doi       = {10.1007/s13278-021-00788-2},
+  owner     = {Vincent},
+  timestamp = {2021.08.20},
 }
 
 @Book{Chambers1959,
@@ -6761,6 +6893,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.06.24},
 }
 
+@InProceedings{Chen2021h,
+  author        = {Chen, Y. and Ling, Z.-H. and Liu, Q.-F.},
+  title         = {A Neural-Network-Based Approach to Identifying Speakers in Novels},
+  booktitle     = {Interspeech},
+  year          = {2021},
+  pages         = {4114-4118},
+  __markedentry = {[Vincent:]},
+  doi           = {10.21437/Interspeech.2021-609},
+  owner         = {Vincent},
+  timestamp     = {2021.09.04},
+}
+
 @Book{Cheney2008,
   title     = {Shakespeare's Literary Authorship},
   publisher = {Cambridge University Press},
@@ -6982,6 +7126,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=1866782},
+}
+
+@Article{Christou2021,
+  author    = {Christou, D. and Tsoumakas, G.},
+  title     = {Extracting Semantic Relationships in Greek Literary Texts},
+  journal   = {Sustainability},
+  year      = {2021},
+  volume    = {13},
+  number    = {16},
+  pages     = {9391},
+  doi       = {10.3390/su13169391},
+  owner     = {Vincent},
+  timestamp = {2021.08.24},
 }
 
 @Article{Chu2005,
@@ -7325,6 +7482,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1400751.1400781},
   owner     = {Vincent},
   timestamp = {2020.03.17},
+}
+
+@Article{Clifford1994,
+  author    = {Clifford, J.},
+  title     = {Diasporas},
+  journal   = {Cultural Anthropology},
+  year      = {1994},
+  volume    = {9},
+  number    = {3},
+  pages     = {302-338},
+  doi       = {10.1525/can.1994.9.3.02a00040},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @Article{Clough2016,
@@ -8874,6 +9044,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.taylorfrancis.com/books/e/9781135965259/chapters/10.4324/9780203873540-12},
+}
+
+@Article{Desfontaine2018,
+  author    = {Desfontaine, P. and Mesyngier, P. and Renaud, J.-N.},
+  title     = {Thorgal, ``soft'' masculinity as a model for young people?},
+  journal   = {Agora débats/jeunesses},
+  year      = {2018},
+  volume    = {78},
+  number    = {1},
+  pages     = {67-85},
+  doi       = {10.3917/agora.078.0067},
+  owner     = {Vincent},
+  timestamp = {2021.04.24},
 }
 
 @Book{Dever2003,
@@ -10521,6 +10704,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.semanticscholar.org/paper/Detecting-Story-Analogies-from-Annotations-of-Time%2C-Elson/5780f7a71f4bd2816508d7031da9aa7dfd748e14},
+}
+
+@Article{Emirbayer1997,
+  author    = {Emirbayer, M.},
+  title     = {Manifesto for a Relational Sociology},
+  journal   = {American Journal of Sociology},
+  year      = {1997},
+  volume    = {103},
+  number    = {2},
+  pages     = {281-317},
+  doi       = {10.1086/231209},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @Article{Endert2012,
@@ -12715,6 +12911,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://college.holycross.edu/interfaces/vol27/gaskill_essay.pdf},
 }
 
+@InCollection{Gates2006,
+  author    = {Gates, H. L.},
+  title     = {The Black Letters on the Sign: W.E.B. Du Bois and the Canon},
+  booktitle = {Dusk of Dawn (The Oxford W.E.B. Du Bois)},
+  publisher = {Oxford University Press},
+  year      = {2006},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.oxfordreference.com/view/10.1093/oi/authority.20110803095736688},
+}
+
 @InProceedings{Ge2009,
   author    = {Ge, W. and Collins, R. T. and Ruback, B.},
   title     = {Automatically detecting the small group structure of a crowd},
@@ -14454,6 +14661,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.30},
 }
 
+@InCollection{Hall2012,
+  author    = {Hall, S.},
+  title     = {Introduction: Who Needs `Identity'?},
+  booktitle = {Questions of Cultural Identity},
+  publisher = {SAGE},
+  year      = {2012},
+  chapter   = {1},
+  pages     = {1-17},
+  doi       = {10.4135/9781446221907.n1},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @InProceedings{Halpin2004,
   author    = {Halpin, H. and Moore, J. D. and Robertson, J.},
   title     = {Automatic analysis of plot for story rewriting},
@@ -15688,6 +15908,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.28},
 }
 
+@InCollection{Hogg2012,
+  author    = {Hogg, M. A.},
+  title     = {Social identity and the psychology of groups},
+  booktitle = {Handbook of self and identity},
+  publisher = {Guilford Press},
+  year      = {2012},
+  pages     = {502-519},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.guilford.com/books/Handbook-of-Self-and-Identity/Leary-Tangney/9781462515370},
+}
+
 @Article{Hoggart1966,
   author    = {Hoggart, R.},
   title     = {Literature and society},
@@ -16209,6 +16441,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.21},
 }
 
+@InCollection{Hu-DeHart2010,
+  author    = {Hu-DeHart, E.},
+  title     = {Indispensable Enemy Or Convenient Scapegoat? A Critical Examination Of Sinophobia In Latin America And The Caribbean, 1870s To 1930s},
+  booktitle = {The Chinese in Latin America and the Caribbean},
+  publisher = {Brill},
+  year      = {2010},
+  chapter   = {3},
+  pages     = {65-102},
+  doi       = {10.1163/ej.9789004182134.i-242.26},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Huisman2003,
   author    = {Huisman, M. and Snijders, T. A. B.},
   title     = {Statistical Analysis of Longitudinal Network Data With Changing Composition},
@@ -16342,6 +16587,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Hussain2005,
+  author    = {Hussain, Y. and Bagguley, P.},
+  title     = {Citizenship, Ethnicity and Identity},
+  journal   = {Sociology},
+  year      = {2005},
+  volume    = {39},
+  number    = {3},
+  pages     = {407-425},
+  doi       = {10.1177/0038038505052493},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Book{Hutcheon2012,
   title     = {A Theory of Adaptation},
   publisher = {Routledge},
@@ -16361,6 +16619,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2015.11.19},
   url       = {https://mindmodeling.org/cogsci2012/papers/0096/paper0096.pdf},
+}
+
+@Book{Hutchison2018,
+  title     = {Dimensions of Human Behavior: The Changing Life Course},
+  publisher = {SAGE},
+  year      = {2018},
+  author    = {Hutchison, E. D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://us.sagepub.com/en-us/nam/dimensions-of-human-behavior/book259362},
 }
 
 @Book{Hutton1982,
@@ -16941,6 +17209,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Book{Jenkins2014,
+  title     = {Social Identity},
+  publisher = {Routledge},
+  year      = {2014},
+  author    = {Jenkins, R.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.routledge.com/Social-Identity/Jenkins/p/book/9780415706926},
+}
+
 @Article{Jeong2000,
   author    = {Jeong, H. and Tombor, B. and Albert, R. and Oltvai, Z. and Barabási, A.-L.},
   title     = {The large-scale organization of metabolic networks},
@@ -17220,6 +17498,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/pacificvis.2019.00037},
   owner     = {Vincent},
   timestamp = {2020.08.04},
+}
+
+@Article{Johnson1990,
+  author    = {Johnson, G. D. and Thomas, J. S. and Matre, M.},
+  title     = {Race, Social Ties, Social Support, and Subjective Well-Being: Evidence from a Community Study},
+  journal   = {Sociological Focus},
+  year      = {1990},
+  volume    = {23},
+  number    = {4},
+  pages     = {341-354},
+  doi       = {10.1080/00380237.1992.10570573},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @InCollection{Johnson1994,
@@ -17712,6 +18003,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Electronic{Kaminski2012,
+  author       = {Kaminski, Jermain and Schober, Michael and Zastupailo, Oleksandr and Hidalgo, César},
+  month        = {Dec},
+  year         = {2012},
+  title        = {Moviegalaxies - Social Networks in Movies},
+  organization = {Moviegalaxies},
+  doi          = {10.7910/DVN/T4HBA3},
+  owner        = {Vincent},
+  timestamp    = {2021.08.26},
+}
+
 @Article{Kanungo2002,
   author    = {Kanungo, T. and Mount, D. M. and Netanyahu, N. S. and Piatko, C. D. and Silverman, R. and Wu, A. Y.},
   title     = {An efficient k-means clustering algorithm: analysis and implementation},
@@ -17944,6 +18246,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.tics.2010.02.005},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@TechReport{Kelsall2004,
+  author      = {Kelsall, T.},
+  title       = {Contentious Politics, Local Governance and the Self: A Tanzanian Case Study},
+  institution = {Nordic Africa Institute},
+  year        = {2004},
+  type        = {Technical Report},
+  number      = {129},
+  owner       = {Vincent},
+  timestamp   = {2021.09.16},
+  url         = {http://swepub.kb.se/bib/swepub:oai:DiVA.org:nai-104?vw=full&tab2=abs},
 }
 
 @InProceedings{Kempe2003,
@@ -19771,6 +20085,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aaai.org/ocs/index.php/FSS/FSS10/paper/viewPaper/2323},
 }
 
+@Book{Lam2017,
+  title     = {Chopsticks and Gambling},
+  publisher = {Routledge},
+  year      = {2017},
+  author    = {Lam, D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.routledge.com/Chopsticks-and-Gambling/Lam/p/book/9781138508149},
+}
+
+@Article{Lambert2013,
+  author    = {Lambert, N. M. and Stillman, T. F. and Hicks, J. A. and Kamble, S. and Baumeister, R. F. and Fincham, F. D.},
+  title     = {To Belong Is to Matter: Sense of Belonging Enhances Meaning in Life},
+  journal   = {Personality and Social Psychology Bulletin},
+  year      = {2013},
+  volume    = {39},
+  number    = {11},
+  pages     = {1418-1427},
+  doi       = {10.1177/0146167213499186},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Lambiotte2007,
   author    = {Lambiotte, R. and Ausloos, M. and Thelwall, M.},
   title     = {Word statistics in Blogs and {RSS} feeds: Towards empirical universal evidence},
@@ -21065,6 +21402,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.10.25},
 }
 
+@InCollection{Li2005,
+  author    = {Li, A.},
+  title     = {Survival, Adaptation, and Integration: Origins and Evolution of the Chinese Community in Jamaica (1854-1962)},
+  booktitle = {Chinese Economic Development},
+  publisher = {Markus Wiener},
+  year      = {2005},
+  pages     = {41-68},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.semanticscholar.org/paper/Survival%2CAdaptation-and-Integration%3A-Origins-and-of-An-shan/1e23c7a2406c7e2247384e8c952559209167d4c0},
+}
+
 @Article{Li2006,
   author    = {Li, Y. and Lee, S.-H. and Yeh, C.-H. and Kuo, C.-C. J.},
   title     = {Techniques for movie content analysis and skimming: tutorial and overview on video abstraction techniques},
@@ -22060,6 +22409,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Article{Loo2008,
+  author    = {Loo, J. M. Y. and Raylu, N. and Oei, T. P. S.},
+  title     = {Gambling among the Chinese: A comprehensive review},
+  journal   = {Clinical Psychology Review},
+  year      = {2008},
+  volume    = {28},
+  number    = {7},
+  pages     = {1152-1166},
+  doi       = {10.1016/j.cpr.2008.04.001},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Lospinoso2010,
   author    = {Lospinoso, J. A. and Schweinberger, M. and Snijders, T. A. B. and Ripley, R. M.},
   title     = {Assessing and accounting for time heterogeneity in stochastic actor oriented models},
@@ -22194,6 +22556,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://escholarship.org/uc/item/1ps0b1cg},
+}
+
+@InCollection{Lowe2006,
+  author    = {Lowe, K.},
+  title     = {Reflections on Chinese Settlement in Jamaica},
+  booktitle = {Essays on the Chinese Diaspora in the Caribbean},
+  publisher = {University of the West Indies Press},
+  year      = {2006},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://books.google.fr/books?id=d7PcAwAAQBAJ},
 }
 
 @Article{Lu2010,
@@ -23059,6 +23432,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1402.4259},
 }
 
+@InCollection{Marceniuk2021,
+  author    = {Marceniuk, V. and Zawiślak, S. and Kopeć, J.},
+  title     = {Graph-Based Analysis of Drama Text-Case Study Based on Shakespeare's `Measure for Measure'},
+  booktitle = {Mechanisms and Machine Science},
+  publisher = {Springer},
+  year      = {2021},
+  series    = {Mechanisms and Machine Science},
+  pages     = {221-242},
+  doi       = {10.1007/978-3-030-76787-7_11},
+  owner     = {Vincent},
+  timestamp = {2021.08.03},
+}
+
 @InProceedings{Marcu1997,
   author    = {Marcu, D.},
   title     = {The rhetorical parsing of natural language texts},
@@ -23478,6 +23864,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s41109-016-0012-1},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@Article{Massey2019,
+  author    = {Massey, S. E.},
+  title     = {Form and relationship of the social networks of the New Testament},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2019},
+  volume    = {9},
+  pages     = {32},
+  doi       = {10.1007/s13278-019-0577-7},
+  owner     = {Vincent},
+  timestamp = {2021.09.02},
 }
 
 @Article{Masucci2006,
@@ -24039,6 +24437,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.jstor.org/stable/20522424},
+}
+
+@Article{Meeus2005,
+  author    = {Meeus, W. and Iedema, J. and Maassen, G. and Engels, R.},
+  title     = {Separation-individuation revisited: on the interplay of parent-adolescent relations, identity and emotional adjustment in adolescence},
+  journal   = {Journal of Adolescence},
+  year      = {2005},
+  volume    = {28},
+  number    = {1},
+  pages     = {89-106},
+  doi       = {10.1016/j.adolescence.2004.07.003},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @Book{Mehrabian1972,
@@ -24873,6 +25284,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Book{Moon2010,
+  title     = {The Criteria to Winner: Security and Risk Management for Printed Lottery},
+  publisher = {Lulu Enterprises},
+  year      = {2010},
+  author    = {Moon, H.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://books.google.fr/books?id=aTZISHHv7b4C},
+}
+
 @Article{Moore2000,
   author    = {Moore, C. and Newman, M. E. J.},
   title     = {Epidemics and percolation in small-world networks},
@@ -24907,6 +25328,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://books.google.fr/books/about/Ossian_and_Ossianism_The_poems_of_Ossian.html?id=dRXgYkQoHDIC&redir_esc=y},
+}
+
+@Book{Moore2004a,
+  title     = {Neither Led nor Driven: Contesting British Cultural Imperialism in Jamaica, 1865-1920},
+  publisher = {University of the West Indies Press},
+  year      = {2004},
+  author    = {Moore, B. L. and Johnson, M. A.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://books.google.fr/books/about/Neither_Led_Nor_Driven.html?id=TsxqAAAAMAAJ},
 }
 
 @Book{Moreno1934,
@@ -27801,6 +28232,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Book{Patterson1977,
+  title     = {Ethnic Chauvinism: The Reactionary Impulse},
+  publisher = {Stein and Day},
+  year      = {1977},
+  author    = {Patterson, O.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://books.google.fr/books/about/Ethnic_Chauvinism.html?id=-DfmHwAACAAJ},
+}
+
 @InCollection{Pattynama1998,
   author    = {Pattynama, P.},
   title     = {Secrets and Danger: Interracial Sexuality in Louis Couperus's The Hidden Force and Dutch Colonial Culture around 1900},
@@ -28397,6 +28838,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.bloomsbury.com/us/toward-a-modernist-style-john-dos-passos-9781623564896},
+}
+
+@InCollection{Pizzorno1991,
+  author    = {Pizzorno, A.},
+  title     = {On the Individualistic Theory of Social Order},
+  booktitle = {Social Theory for a Changing Society},
+  publisher = {Routledge},
+  year      = {1991},
+  chapter   = {7},
+  doi       = {10.4324/9780429306440-8},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @InProceedings{Plaisant2006,
@@ -32572,6 +33025,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.tidytextmining.com/},
 }
 
+@Article{Siljak2021,
+  author    = {Šiljak, H.},
+  title     = {Networks of Twin Peaks: the Dale Cooper Effect},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.SI},
+  pages     = {2108.09516},
+  owner     = {Vincent},
+  timestamp = {2021.08.28},
+  url       = {https://arxiv.org/abs/2108.09516},
+}
+
 @Article{Silva2011,
   author    = {Silva, F. N. and Viana, M. P. and Travençolo, B. A. N. and da Fontoura Costa, L.},
   title     = {Investigating relationships within and between category networks in Wikipedia},
@@ -33713,6 +34178,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Article{Stillman2009,
+  author    = {Stillman, T. F. and Baumeister, R. F. and Lambert, N. M. and Crescioni, A. W. and DeWall, C. N. and Fincham, F. D.},
+  title     = {Alone and without purpose: Life loses meaning following social exclusion},
+  journal   = {Journal of Experimental Social Psychology},
+  year      = {2009},
+  volume    = {45},
+  number    = {4},
+  pages     = {686-694},
+  doi       = {10.1016/j.jesp.2009.03.007},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Electronic{Stoltzman2016,
   author       = {Stoltzman, S.},
   month        = {12},
@@ -34229,6 +34707,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://psycnet.apa.org/record/2001-01466-005},
 }
 
+@Book{Tajfel1981,
+  title     = {Human Groups and Social Categories: Studies in Social Psychology},
+  publisher = {Cambridge University Press},
+  year      = {1981},
+  author    = {Tajfel, H.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.cambridge.org/fr/academic/subjects/psychology/social-psychology/human-groups-and-social-categories-studies-social-psychology?format=PB&isbn=9780521280730},
+}
+
 @InProceedings{Takayama2012,
   author    = {Takayama, K. and Johan, H. and Nishita, T.},
   title     = {Face Detection and Face Recognition of Cartoon Characters Using Feature Extraction},
@@ -34313,6 +34801,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3183370},
   owner     = {Vincent},
   timestamp = {2020.12.17},
+}
+
+@PhdThesis{Tan2018a,
+  author      = {Tan, M. S. A.},
+  title       = {Character network analysis of two science fiction series : Stargate and Star Trek},
+  year        = {2018},
+  type        = {PhD Thesis},
+  institution = {Universiti Malaya},
+  owner       = {Vincent},
+  timestamp   = {2021.09.02},
+  url         = {http://myto.upm.edu.my/find/Record/um.u1112507},
 }
 
 @Article{Tanahashi2012,
@@ -34698,6 +35197,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Article{Teng2021,
+  author    = {Teng, Y. and Song, C. and Wu, B.},
+  title     = {Toward jointly understanding social relationships and characters from videos},
+  journal   = {Applied Intelligence},
+  year      = {2021},
+  volume    = {in press},
+  doi       = {10.1007/s10489-021-02738-z},
+  owner     = {Vincent},
+  timestamp = {2021.08.19},
+}
+
 @Article{Terian2019,
   author    = {Terian, A.},
   title     = {Big Numbers: A Quantitative Analysis of the Development of the Novel in Romania},
@@ -34770,6 +35280,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1651461.1651476},
   owner     = {Vincent},
   timestamp = {2019.03.29},
+}
+
+@InProceedings{Thiry2019,
+  author    = {Thiry, M.},
+  title     = {Reshaping the Scandinavian Saga through Hybridity: ``{Thorgal}'', an Anti-Mythological Hero},
+  booktitle = {International Congress of Medieval Studies},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2021.04.24},
+  url       = {https://dial.uclouvain.be/pr/boreal/object/boreal:219470/datastream/PDF_01/view},
 }
 
 @Book{Thomas2005,
@@ -34968,6 +35488,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://escholarship.org/uc/item/21h9t3sw},
+}
+
+@Book{Tilly2005,
+  title     = {Identities, Boundaries and Social Ties},
+  publisher = {Routledge},
+  year      = {2005},
+  author    = {Tilly, C.},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+  url       = {https://www.routledge.com/Identities-Boundaries-and-Social-Ties/Tilly/p/book/9781594511325},
 }
 
 @Book{Tillyard1949,
@@ -35746,6 +36276,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://press.uchicago.edu/ucp/books/book/chicago/D/bo35853783.html},
+}
+
+@MastersThesis{Urbanova2021,
+  author    = {Urbanová , Z.},
+  title     = {Quote Attribution and Character Networks in Novels},
+  school    = {Faculty of Mathematics and Physics, Charles University},
+  year      = {2021},
+  type      = {BSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2021.07.26},
+  url       = {https://dspace.cuni.cz/bitstream/handle/20.500.11956/127970/130309114.pdf?sequence=1},
 }
 
 @Book{Uspensky1983,
@@ -37417,6 +37958,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://faculty.gordon.edu/hu/bi/ted_hildebrandt/NTeSources/NTArticles/BSac-NT/Williams-MarkCharacters-BS.pdf},
 }
 
+@InCollection{Williams1997,
+  author    = {Williams, K. D.},
+  title     = {Social Ostracism},
+  booktitle = {Aversive Interpersonal Behaviors},
+  publisher = {Springer},
+  year      = {1997},
+  series    = {Springer Series in Social/Clinical Psychology},
+  pages     = {133-170},
+  doi       = {10.1007/978-1-4757-9354-3_7},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
+}
+
 @Article{Williams2002,
   author    = {Williams, R. J. and Martinez, N. D. and Berlow, E. L. and Dunne, J. A. and Barabási, A.-L.},
   title     = {Two degrees of separation in complex food webs},
@@ -38435,6 +38989,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://faculty.ist.psu.edu/yen/FLtext/},
 }
 
+@InProceedings{Yeruva2020,
+  author    = {Yeruva, V. K. and ChandraShekar, M. and Lee, Y. and Rydberg-Cox, J. and Blanton, V. and Oyler, N. A.},
+  title     = {Interpretation of Sentiment Analysis in Aeschylus’s Greek Tragedy},
+  booktitle = {4th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2021.09.06},
+  url       = {https://aclanthology.org/2020.latechclfl-1.17},
+}
+
+@InProceedings{Yeruva2020a,
+  author    = {Yeruva, V. K. and Chandrashekar, M. and Lee, Y. and Rydberg-Cox, J. and Blanton, V. and Oyler, N. A.},
+  title     = {Interpretation of Sentiment Analysis with Human-in-the-Loop},
+  booktitle = {4th IEEE Workshop on Human-in-the-Loop Methods and Future of Work in BigData},
+  year      = {2020},
+  pages     = {3099-3108},
+  doi       = {10.1109/bigdata50022.2020.9378221},
+  owner     = {Vincent},
+  timestamp = {2021.09.06},
+}
+
 @InProceedings{Yessenalina2010,
   author    = {Yessenalina, A. and Yue, Y. and Cardie, C.},
   title     = {Multi-level structured models for document-level sentiment classification},
@@ -39129,6 +39704,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.02.04},
 }
 
+@Article{Zhang2021o,
+  author    = {Zhang, C. and Zhang, Q. and Yu, S. and Yu, J. J. Q. and Song, X.},
+  title     = {Complicating the Social Networks for Better Storytelling: An Empirical Study of Chinese Historical Text and Novel},
+  journal   = {IEEE Transactions on Computational Social Systems},
+  year      = {2021},
+  volume    = {8},
+  number    = {3},
+  pages     = {754-767},
+  doi       = {10.1109/TCSS.2021.3061702},
+  owner     = {Vincent},
+  timestamp = {2021.09.05},
+}
+
 @Article{Zhao2003,
   author    = {Zhao, W. and Chellappa, R. and Phillips, P. J. and Rosenfeld, A.},
   title     = {Face recognition},
@@ -39237,6 +39825,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.23},
 }
 
+@Article{Zhao2021e,
+  author    = {Zhao, Y. and Shi, J. and Liu, J. and Zhao, J. and Zhou, F. and Zhang, W. and Chen, K. and Zhao, X. and Zhu, C. and Chen, W.},
+  title     = {Evaluating Effects of Background Stories on Graph Perception},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2021},
+  volume    = {in press},
+  doi       = {10.1109/tvcg.2021.3107297},
+  owner     = {Vincent},
+  timestamp = {2021.08.30},
+}
+
 @InProceedings{Zheleva2009,
   author    = {Zheleva, E. and Getoor, L.},
   title     = {To join or not to join: the illusion of privacy in social networks with mixed public and private user profiles},
@@ -39258,6 +39857,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.jbi.2011.08.006},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Article{Zheng2011a,
+  author    = {Zheng, W. Y. and Walker, M. and Blaszczynski, A.},
+  title     = {Mahjong and Problem Gambling in Sydney: An Exploratory Study with Chinese Australians},
+  journal   = {Journal of Gambling Issues},
+  year      = {2011},
+  number    = {25},
+  pages     = {24},
+  doi       = {10.4309/jgi.2011.25.3},
+  owner     = {Vincent},
+  timestamp = {2021.09.16},
 }
 
 @InProceedings{ZhengdongLu2008,
@@ -39393,6 +40004,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/asi.23603},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Article{Zhou2015b,
+  author    = {Zhou, Q. and Leydesdorff, L.},
+  title     = {The normalization of occurrence and Co-occurrence matrices in bibliometrics using Cosine similarities and Ochiai coefficients},
+  journal   = {Journal of the Association for Information Science and Technology},
+  year      = {2015},
+  volume    = {67},
+  number    = {11},
+  pages     = {2805-2814},
+  doi       = {10.1002/asi.23603},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
 }
 
 @Article{Zhou2016,
